--- a/Frontend/client-app/package.json
+++ b/Frontend/client-app/package.json
@@ -9,12 +9,16 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@radix-ui/react-accordion": "^1.2.12",
     "@tailwindcss/postcss": "^4.1.14",
     "axios": "^1.12.2",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.552.0",
     "next": "15.5.4",
     "postcss": "^8.5.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.14"
   },
   "devDependencies": {
