--- a/Frontend/client-app/package.json
+++ b/Frontend/client-app/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@radix-ui/react-accordion": "^1.2.12",
+    "tailwindcss": "^3.x.x",
     "@tailwindcss/postcss": "^4.1.14",
     "axios": "^1.12.2",
     "clsx": "^2.1.1",
@@ -18,8 +19,7 @@
     "postcss": "^8.5.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "tailwind-merge": "^3.3.1",
-    "tailwindcss": "^4.1.14"
+    "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
