--- a/Frontend/client-app/package.json
+++ b/Frontend/client-app/package.json
@@ -11,10 +11,12 @@
   "dependencies": {
     "@tailwindcss/postcss": "^4.1.14",
     "axios": "^1.12.2",
+    "lucide-react": "^0.553.0",
     "next": "15.5.4",
     "postcss": "^8.5.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-responsive": "^10.0.1",
     "tailwindcss": "^4.1.14"
   },
   "devDependencies": {
