--- a/.gitignore
+++ b/.gitignore
@@ -41,6 +41,12 @@ frontend/.pnp.js
 frontend/.vercel
 frontend/*.tsbuildinfo
 
+# --- JETBRAINS ---
+*.idea/
+
+# --- Visual Studio ---
+*.vs/
+
 # IMPORTANT: keep next-env.d.ts tracked (don't ignore)
 # (Next.js requires it in the repo)
 # frontend/next-env.d.ts  <-- intentionally NOT ignored
